src/components/common/Scaffold/Scaffold.scss
.Scaffold {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  background: var(--background);
  min-height: -webkit-fill-available;
  padding: 0px 100px;
  justify-content: center;
}

.ScaffoldContent {
  flex: 1;
  overflow: hidden;
  padding: 0px 8px;
  display: flex;
  flex-direction: row;
}

@media (max-width: 1200px) {
  .Scaffold {
    padding: 0px;
  }
  .ScaffoldContent {
    padding: 0px;
  }
}

